# Phronesisml

./: .dockerignore  .gitignore  ARCHITECTURE_AUDIT.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PHASE9_REPORT.md  README.md  SECURITY.md  Striver A2Z custom final (2).xlsx  mkdocs.yml  pyproject.toml  requirements.txt  test_audit_sample.csv  test_phronesis.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
aetherml/: __init__.py  exceptions.py  sdk.py  simple.py
aetherml/agents/: base.py
aetherml/agents/eda/: agent.py
aetherml/agents/engine_selection/: agent.py
aetherml/agents/etl/: agent.py
aetherml/agents/evaluation/: agent.py
aetherml/agents/explainability/: agent.py
aetherml/agents/feature_engineering/: agent.py
aetherml/agents/model_selection/: agent.py
aetherml/agents/rag/: agent.py
aetherml/agents/reporting/: agent.py
aetherml/agents/storage/: agent.py
aetherml/agents/target_detection/: agent.py
aetherml/agents/upload/: agent.py
aetherml/agents/validation/: agent.py
aetherml/configs/: __init__.py  settings.py
aetherml/data/loaders/: file_loader.py
aetherml/data/profilers/: stats.py
aetherml/data/validators/: checks.py
aetherml/database/qdrant/: client.py
aetherml/engines/: engine_selector.py  pandas_engine.py  polars_engine.py  spark_engine.py
aetherml/interfaces/api/: __init__.py  app.py  jobs.py  models.py  routes.py
aetherml/interfaces/cli/: app.py
aetherml/llm/gemma/: client.py
aetherml/ml/automl/: __init__.py  auto_selector.py  trainer.py
aetherml/ml/evaluation/: __init__.py  metrics.py
aetherml/ml/explainability/: shap_explainer.py
aetherml/ml/feature_engineering/: __init__.py  engineer.py
aetherml/ml/reports/: builder.py
aetherml/ml/target_detection/: __init__.py  detector.py
aetherml/rag/: context.py
aetherml/rag/embeddings/: wrapper.py
aetherml/rag/knowledge_base/: store.py
aetherml/rag/retrieval/: retriever.py
aetherml/workflow/: graph.py  nodes.py  router.py  state.py
aetherml_artifacts/default_run/: run_metadata.json
benchmarks/: baseline.json  bench_baseline.py
demo/: 00_make_data.py  01_simple_api.py  02_oop_api.py  03_advanced_api.py  customers.csv
docs/: api.md  index.md  limitations.md
docs/guides/: advanced-api.md  cli.md  incremental.md  rest-api.md  simple-api.md
phronesisml/: __init__.py  _result_builders.py  _stages.py  exceptions.py  sdk.py  simple.py
phronesisml/agents/: base.py  compose.py
phronesisml/agents/eda/: agent.py
phronesisml/agents/etl/: agent.py
phronesisml/agents/evaluation/: agent.py
phronesisml/agents/explainability/: agent.py
phronesisml/agents/feature_engineering/: agent.py
phronesisml/agents/model_selection/: agent.py
phronesisml/agents/reporting/: agent.py
phronesisml/agents/storage/: agent.py
phronesisml/agents/target_detection/: agent.py
phronesisml/agents/upload/: agent.py
phronesisml/agents/validation/: agent.py
phronesisml/configs/: __init__.py  settings.py
phronesisml/data/loaders/: file_loader.py
phronesisml/data/profilers/: __init__.py  stats.py
phronesisml/data/transformers/: cleaning.py
phronesisml/data/validators/: __init__.py  checks.py
phronesisml/engines/: base_engine.py  engine_selector.py  pandas_engine.py  polars_engine.py  spark_engine.py
phronesisml/interfaces/api/: __init__.py  app.py  jobs.py  models.py  routes.py
phronesisml/interfaces/cli/: app.py
phronesisml/ml/automl/: __init__.py  auto_selector.py  trainer.py
phronesisml/ml/evaluation/: __init__.py  metrics.py
phronesisml/ml/explainability/: __init__.py  service.py  shap_explainer.py
phronesisml/ml/feature_engineering/: __init__.py  engineer.py
phronesisml/ml/preflight/: __init__.py  config.py  estimator.py  memory.py  sampler.py
phronesisml/ml/reports/: __init__.py  builder.py
phronesisml/ml/reports/templates/: full_report.md
phronesisml/ml/target_detection/: __init__.py  detector.py
phronesisml/ml/task_detection/: detector.py
phronesisml/services/: __init__.py  data_resolution.py  storage.py
phronesisml/utils/: __init__.py  dtypes.py
phronesisml/workflow/: __init__.py  graph.py  nodes.py  router.py  sampling_node.py  state.py
tests/: conftest.py  test_api.py  test_cli_app.py  test_configs_settings.py  test_data_contract.py  test_data_pipeline.py  test_eda_agent.py  test_edge_cases.py  test_engines_full.py  test_etl_agent.py  test_evaluation.py  test_explainability.py  test_feature_engineering.py  test_file_loader.py  test_full_pipeline.py  test_model_selection.py  test_pipeline_e2e.py  test_preflight.py  test_rag.py  test_reporting.py  test_retroactive.py  test_sdk.py  test_simple.py  test_stub_agents.py  test_target_detection.py  test_upload_agent.py  test_validation_agent.py  test_verification.py  test_workflow_modules.py  verify_ambiguous.py  verify_ambiguous_unit.py  verify_pass4.py
tests/fixtures/: ambiguous_target.csv
