[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetherml"
version = "0.1.0"
description = "Open-source Python SDK that automates the complete ML lifecycle using a modular multi-agent architecture orchestrated by LangGraph."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Kartik Sharma", email = "kartiksharma18852@gmail.com" }]
keywords = ["machine-learning", "automl", "mlops", "langgraph", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/kartiksharma/AetherML"
Repository = "https://github.com/kartiksharma/AetherML"
Issues = "https://github.com/kartiksharma/AetherML/issues"
Changelog = "https://github.com/kartiksharma/AetherML/blob/main/CHANGELOG.md"

dependencies = [
    "pydantic>=2.0,<3.0",
    "langgraph>=0.2,<1.0",
    "pandas>=2.0,<3.0",
    "polars>=1.0,<2.0",
    "scikit-learn>=1.3,<2.0",
    "numpy>=1.24,<3.0",
]

[project.optional-dependencies]
cli = ["typer>=0.12,<1.0", "rich>=13.0,<14.0"]
excel = ["openpyxl>=3.1,<4.0"]
spark = ["pyspark>=3.5,<4.0"]
api = ["fastapi>=0.111,<1.0", "uvicorn>=0.30,<1.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
aetherml = "aetherml.interfaces.cli.app:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401", "N812", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
